# flec

./: .gitignore  README.md  processed_cleveland.txt  pyproject.toml  run_in_terminal.py
flec/: SingleTrainTest.py  __init__.py  client_app.py  server_app.py  task.py
