[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flec"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.19.0",
    "flwr-datasets>=0.5.0",
    "torch==2.5.1",
    "transformers>=4.30.0,<5.0",
    "evaluate>=0.4.0,<1.0",
    "datasets>=2.0.0, <3.0",
    "scikit-learn>=1.6.1, <2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "dylanfuan03"

[tool.flwr.app.components]
serverapp = "flec.server_app:app"
clientapp = "flec.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 10
fraction-fit = 0.1
local-epochs = 2
model-name = "allenai/biomed_roberta_base" # Set a larger model if you have access to more GPU resources
num-labels = 2

[tool.flwr.federations]
default = "localhost"

[tool.flwr.federations.localhost]
options.num-supernodes = 3

[tool.flwr.federations.localhost-gpu]
options.num-supernodes = 3
options.backend.client-resources.num-cpus = 1 # each ClientApp assumes to use 4CPUs
options.backend.client-resources.num-gpus = 0.5 # at most 4 ClientApps will run in a given GPU
